crates/pgls_pretty_print/tests/snapshots/single/tests__create_trig_stmt_0_60.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_trig_stmt_0_60.sql
snapshot_kind: text
---
CREATE TRIGGER my_trigger
AFTER
INSERT
ON my_table
FOR EACH ROW
EXECUTE FUNCTION my_function();
