crates/pgls_pretty_print/tests/snapshots/single/tests__create_user_mapping_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/create_user_mapping_stmt_0.sql
snapshot_kind: text
---
create user mapping for myuser server myserver;
