crates/pgls_pretty_print/tests/snapshots/single/tests__current_of_expr_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/current_of_expr_0.sql
snapshot_kind: text
---
DELETE FROM table_name WHERE CURRENT OF cursor_name;
