crates/pgls_pretty_print/tests/snapshots/single/tests__deallocate_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/deallocate_stmt_0.sql
snapshot_kind: text
---
DEALLOCATE my_insert;
